a little bit of refactoring
a little bit of refactoring
- moved contentful keys to config files
- tweaked the echo migrations to alter rather than to try to create
user table twice
- added a cms context
- refactored layout view and layout app.html to use CMS context and put
decorations in view function

--- a/lib/chrono_web/templates/about/index.html.eex
+++ b/lib/chrono_web/templates/about/index.html.eex
@@ -1,5 +1,5 @@
 
-<% content = Contentful.Delivery.entry(System.get_env("SPACE_ID"), System.get_env("ACCESS_TOKEN"),  "5o68EBRcY0QE4OMWiYmeiE" ) %>
+<% content = Contentful.Delivery.entry(Application.get_env(:chrono,:contentful_space), Application.get_env(:chrono,:contentful_key),  "5o68EBRcY0QE4OMWiYmeiE" ) %>
 <h2><%= content["fields"]["title"] %> </h2>
 <div class="jumbotron">
 	<%= case Earmark.as_html(content["fields"]["body"]) do
