--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -1,64 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Watch sharing">
+    <meta name="author" content="vp, jb">
 
-  <title>Chrono-</title>
-  <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
-</head>
+    <title>Chrono</title>
+    <link rel="stylesheet" href="<%= static_path(@conn, "/css/bootsketch.css") %>">
+    <!--link rel="stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
+    
+  </head>
 
 
-<body>
-  <div class='container'>
-   <div class='row'>
-   <div class='col'>
-      <nav class="navbar navbar-fixed-top navbar-inverse">
-        <ul class="nav navbar-nav">
-          <li><a href="/diary"> Watch Diary</a></li>
-          <li><a href="/gallery/all">Watch Gallery</a></li>
-          <%= for page <- pages do %>
-          <li><a href="<%="/page/"<>page.title%>"><%= page.title%></a></li>
-          <% end %>
-        </ul>
+  <body>
+    <div class='container'>
+      <div class='row'>
+          <nav class="navbar navbar-inverse nav-fixed-top" role="navigation">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Chrono</a>
+              </div>
 
-        <ul class="nav navbar-nav navbar-right">
+              <!-- Collect the nav links -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Link</a></li>
+                  <%= for page <- pages do %>
+                    <li><a href="<%="/page/"<>page.title%>"><%= page.title%></a></li>
+                  <% end %>
+                </ul>
 
-          <%= if @conn.assigns[:user] do %>
-          <li><a href="/account">Signed in as <%= @conn.assigns.user.first_name %></a></li>
-          <li> <%= link "Sign out  ", to: auth_path(@conn, :delete), class: "button" %> </li>
-          <% else %>
-          <li> <%= link "Sign in with Google ", to: auth_path(@conn, :request, "google", scope: "email profile"), class: "button" %></li>
-          <% end %>
+                <ul class="nav navbar-nav navbar-right">
+                  <%= if @conn.assigns[:user] do %>
+                    <li><a href="/account">Signed in as <%= @conn.assigns.user.first_name %></a></li>
+                    <li> <%= link "Sign out  ", to: auth_path(@conn, :delete), class: "button" %> </li>
+                  <% else %>
+                    <li> <%= link "Sign in with Google ", to: auth_path(@conn, :request, "google", scope: "email profile"), class: "button" %></li>
+                  <% end %>
+                </ul>
 
-        </ul>
-      </nav>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </nav>
+      </div>
     </div>
 
-
-    <div class='row'>
-     <div class='col'>
-      <header class="header">
-        <span class="logo"></span>
-      </header>
+    <div class="container">
+      <div class="row">
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      </div>
     </div>
-  </div>
 
-</div>
+    <main role="main">
+      <div class="container">
+        <div class="row">
+          <%= render @view_module, @view_template, assigns %>              
+        </div>
+      </div>
+    </main>
 
+    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/vendors.min.js") %>"></script>
+    <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
 
-
-<p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-<p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-
-<main role="main">
-  <%= render @view_module, @view_template, assigns %>
-</main>
-
-</div> <!-- /container -->
-<script src="<%= static_path(@conn, "/js/app.js") %>"></script>
-</body>
+  </body>
 </html>
