--- a/lib/chrono_web/templates/page/index.html.eex
+++ b/lib/chrono_web/templates/page/index.html.eex
@@ -8,3 +8,13 @@
       <% end %>
   </div>
 
+<%=for page <- pages() do %>
+  <section id= "<%= page.title %>" class="content-section text-center">
+    <div class="container">
+      <div class="row">
+        <h1><%= page.title%></h1>
+        <%= raw(page.html) %>
+      </div>
+    </div>
+  </section>
+<% end %>
