--- a/lib/chrono_web/templates/page/index.html.eex
+++ b/lib/chrono_web/templates/page/index.html.eex
@@ -1,20 +1,35 @@
 <div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}!", name: "Chrono" %></h2>
+  <%= raw(welcome.html) %>
   <p class="lead">           
           <%= if @conn.assigns[:user] do %>
         <li class="menu-text">
           Welcome, <%= @conn.assigns.user.first_name %>!
         </li>
       <% end %>
-  </div>
+</div>
 
 <%=for page <- pages() do %>
-  <section id= "<%= page.title %>" class="content-section text-center">
-    <div class="container">
+  <section id="<%= page.title %>" class="content-section text-center">
+    <%= if page.background_img do %>  
+      <style> .container #<%= page.title |> String.replace(" ","") %> {
+        background: url(https:<%= page.background_img %>);
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }</style> 
+    <% end %>
+    
+    <div id="<%= page.title |> String.replace(" ","") %>"  class="container">
       <div class="row">
         <h1><%= page.title%></h1>
         <%= raw(page.html) %>
       </div>
     </div>
   </section>
+
+
+
 <% end %>
+
+
