--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/bootsketch.css") %>">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/chrono.css") %>">
     <!--Not sure how to drop this into CSS dynamically -->
-    <style> body { background-image: url(<%= background_img %>);}</style> 
+    <style> body { background-image: url(<%= background_img() %>);}</style> 
   </head>
 
 
@@ -36,7 +36,7 @@
         <!-- Collect the nav links -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <%= for page <- pages do %>
+            <%= for page <- pages() do %>
               <li><a href="<%="#"<>page.title%>"><%= page.title%></a></li>
             <% end %>
           </ul>
