aligned the priv/static directory with brunch process

--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -8,18 +8,15 @@
     <meta name="author" content="vp, jb">
 
     <title>Chrono</title>
-    <link rel="stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/bootsketch.css") %>">
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/chrono.css") %>">
+    <!--link rel="stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
+    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    
     <!--Not sure how to drop this into CSS dynamically -->
     <style> body { background-image: url(<%= background_img() %>);}</style> 
   </head>
 
 
   <body>
-
-
-
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -71,9 +68,11 @@
       </div>
     </main>
 
+    
+    <!--script src="<%= static_path(@conn, "/js/vendors.min.js") %>"></script-->
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
-    <script src="<%= static_path(@conn, "/js/vendors.min.js") %>"></script>
-    <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
-
   </body>
 </html>
