Revert "A little brutal :-) dropped Ecto and oAuth added distillery ready for deployment to k8s"
This reverts commit a2629710d65ec703b63e60702e799441954d373d.

--- a/lib/chrono_web/templates/page/index.html.eex
+++ b/lib/chrono_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <%= raw(welcome().html) %>
+  <%= raw(welcome.html) %>
   <p class="lead">           
           <%= if @conn.assigns[:user] do %>
         <li class="menu-text">
