--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -37,6 +37,16 @@
               <li><a href="<%="#"<>page.title%>"><%= page.title%></a></li>
             <% end %>
           </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <%= if @conn.assigns[:user] do %>
+              <li><a href="/account">Signed in as <%= @conn.assigns.user.first_name %></a></li>
+              <li> <%= link "Sign out  ", to: auth_path(@conn, :delete), class: "button" %> </li>
+            <% else %>
+              <li> <%= link "Sign in with Google ", to: auth_path(@conn, :request, "google", scope: "email profile"), class: "button" %></li>
+            <% end %>
+          </ul>
+
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
