--- a/lib/chrono_web/templates/page/index.html.eex
+++ b/lib/chrono_web/templates/page/index.html.eex
@@ -1,14 +1,4 @@
-<div class="jumbotron">
-  <%= raw(welcome().html) %>
-  <p class="lead">           
-          <%= if @conn.assigns[:user] do %>
-        <li class="menu-text">
-          Welcome, <%= @conn.assigns.user.first_name %>!
-        </li>
-      <% end %>
-</div>
-
-<%=for page <- pages() do %>
+<%=for page <- pages(@all_pages) do %>
   <%= render "page.html", page: page %>
 <% end %>
 
@@ -28,6 +18,7 @@
       </div>
   </div>
 </div>
+
 
 
 
