Started Web Design

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,22 +1,1 @@
-/* This file is for your main application css. */
-body {
-  padding-top: 60px;
-}
-section {
-  padding-top: 60px;
-}
-
-body { 
-  /* The image used */
- /*background-image: url(https://images.contentful.com/mny00p4suxt2/6BJISnmFFYgQs8o064mGGg/265bdbbd68a16cabef05954fa2956226/59b3f3a2afb2c1004c099ced.png);
-*/
-  /* Set a specific height */
-  height: 100%; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 50;
-}
+ul { list-style: lower-greek}
