--- a/lib/chrono_web/templates/page/index.html.eex
+++ b/lib/chrono_web/templates/page/index.html.eex
@@ -1,24 +1,8 @@
-<%=for page <- pages(@all_pages) do %>
-  <%= render "page.html", page: page %>
-<% end %>
-
-<div class="photo-gallery">
-  <div class="container">
-      <div class="intro">
-          <h2 class="text-center">The Watches  Subsection</h2>
-          <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
-      </div>
-      <div class="row photos">
-          <div class="col-lg-3 col-md-4 col-sm-6 item">
-              <a href="<%= static_path(@conn, "/images/logo.png")%>" data-lightbox="photos"><img class="img-responsive" src="<%= static_path(@conn, "/images/phoenix.png")%>"</a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 item">
-              <a href="<%= static_path(@conn, "/images/logo.png")%>" data-lightbox="photos"><img class="img-responsive" src="<%= static_path(@conn, "/images/logo.png")%>"</a>
-          </div>
-      </div>
-  </div>
+<div id="wrap">
+    <%=for page <- parse_pages(@all_pages) do %>
+        <%= render "#{page.template}.html", page: page, conn: @conn %>
+    <% end %>
 </div>
-
 
 
 
