--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -1,50 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <title>Chrono 6538</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Watch sharing">
     <meta name="author" content="vp, jb">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Chrono</title>
-    <!--link rel="stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">   
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
-    
-    <!--Not sure how to drop this into CSS dynamically -->
-    <style> body { background-image: url(<%= ChronoWeb.PageController.background_img %>);}</style> 
+
+    <link rel="shortcut icon" href="<%= static_path(@conn, "/images/ico/32.png") %>" sizes="32x32" type="image/png">
+    <link rel="apple-touch-icon" href="<%= static_path(@conn, "/images/ico/60.png")%>" type="image/png">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= static_path(@conn, "/images/ico/72.png")%>"type="image/png">
+    <link rel="apple-touch-icon" sizes="120x120" href=href="<%= static_path(@conn, "/images/ico/120.png")%>" type="image/png">
+    <link rel="apple-touch-icon" sizes="152x152" href=href="<%= static_path(@conn, "/images/ico/152.png")%>"type="image/png">
+    <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script-->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 
-
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Chrono</a>
-        </div>
+    <a id="menu-link" href="#" class="">
+      <span class="menu-icon"></span>
+    </a>
 
-        <!-- Collect the nav links -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <%= for page <- pages(@all_pages) do %>
-              <li><a href="<%="#"<>page.title%>"><%= page.title%></a></li>
-            <% end %>
-          </ul>
-          <!-- Trigger the modal with a button -->
-          <button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target="#registerInterest">Register Interest</button>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+    <div class="overlay" id="overlay">
+      <nav class="overlay-menu">
+        <ul>
+          <%= for page <- pages(@all_pages) do %>
+            <li><a href="<%="#"<>page.title |> String.replace(" ", "") %>" class="smooth-scroll"><%= page.title%></a></li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
 
-    
-    <div class="parallax"></div>
     <!-- Modal Register Interest -->
     <%= render "register_interest.html", conn: @conn%>
 
@@ -55,20 +52,19 @@
       </div>
     </div>
 
-    <main role="main">
-      <div class="container">
-        <div class="row">
-          <%= render @view_module, @view_template, assigns %>              
-        </div>
-      </div>
-    </main>
+    <%= render @view_module, @view_template, assigns %>
 
+    <%= render "footer.html" %>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
- 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.waitforimages/2.2.0/jquery.waitforimages.min.js"></script>
+    <script type="text/javascript" src=https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js></script>
+    <script type="text/javascript" src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script type="text/javascript" LoadAfterUI="true" src="<%= static_path(@conn, "/js/app.js") %>"></script>  
+
   </body>
 </html>
