--- a/lib/chrono_web/templates/page/hero.html.eex
+++ b/lib/chrono_web/templates/page/hero.html.eex
@@ -2,7 +2,16 @@
   <div class="center-box">
     <div class="container-fluid nopadding">
       <div class="hero-unit ">
-        <%= raw(@page.html) %>
+        <div class="row header">
+          <div class="col-md-12 text-center">
+            <h1><b><%= @page.title %></b></h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <%= raw(@page.html) %>
+          </div>
+        </div>
       </div>
       <div class="col-sm-12 img-hero"></div>
     </div>
