--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -11,8 +11,8 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">   
+    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"-->
+    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css"-->   
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
 
     <link rel="shortcut icon" href="<%= static_path(@conn, "/images/ico/32.png") %>" sizes="32x32" type="image/png">
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="<%= static_path(@conn, "/images/ico/72.png")%>"type="image/png">
     <link rel="apple-touch-icon" sizes="120x120" href=href="<%= static_path(@conn, "/images/ico/120.png")%>" type="image/png">
     <link rel="apple-touch-icon" sizes="152x152" href=href="<%= static_path(@conn, "/images/ico/152.png")%>"type="image/png">
-    <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -31,6 +31,13 @@
     <a id="menu-link" href="#" class="">
       <span class="menu-icon"></span>
     </a>
+
+    <div class="container">
+      <div class="row">
+        <%=if get_flash(@conn, :info) do %><p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p><% end %>
+        <%=if get_flash(@conn, :error) do %> <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p><% end %>
+      </div>
+    </div>
 
     <div class="overlay" id="overlay">
       <nav class="overlay-menu">
@@ -45,12 +52,7 @@
     <!-- Modal Register Interest -->
     <%= render "register_interest.html", conn: @conn%>
 
-    <div class="container">
-      <div class="row">
-        <%=if get_flash(@conn, :info) do %><p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p><% end %>
-        <%=if get_flash(@conn, :error) do %> <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p><% end %>
-      </div>
-    </div>
+
 
     <%= render @view_module, @view_template, assigns %>
 
@@ -60,8 +62,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.waitforimages/2.2.0/jquery.waitforimages.min.js"></script>
+    <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script-->
+    <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.waitforimages/2.2.0/jquery.waitforimages.min.js"></script-->
     <script type="text/javascript" src=https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script type="text/javascript" LoadAfterUI="true" src="<%= static_path(@conn, "/js/app.js") %>"></script>  
