--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -11,8 +11,6 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"-->
-    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css"-->   
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
 
     <link rel="shortcut icon" href="<%= static_path(@conn, "/images/ico/32.png") %>" sizes="32x32" type="image/png">
@@ -50,9 +48,7 @@
     </div>
 
     <!-- Modal Register Interest -->
-    <%= render "register_interest.html", conn: @conn%>
-
-
+    <!--%= render "register_interest.html", conn: @conn%-->
 
     <%= render @view_module, @view_template, assigns %>
 
@@ -62,8 +58,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script-->
-    <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.waitforimages/2.2.0/jquery.waitforimages.min.js"></script-->
     <script type="text/javascript" src=https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js></script>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script type="text/javascript" LoadAfterUI="true" src="<%= static_path(@conn, "/js/app.js") %>"></script>  
