Added images from contentful to font page

--- a/assets/css/style-yellow.css
+++ b/assets/css/style-yellow.css
@@ -1178,7 +1178,7 @@ blockquote,
 =               Sliders             =
 ===================================*/
 .slider {
-  background-color: #b6b6b6;
+  background-color: #bdc3c7;
   height: 500px;
   padding: 0;
 }
