--- a/assets/css/style-yellow.css
+++ b/assets/css/style-yellow.css
@@ -855,18 +855,13 @@ form p {
 .hero {
   height: 550px;
 }
-/* .hero-unit {
- text-align: center;
-  padding: 0;
-  margin:  0;
-  background-color: transparent;
-}
-*/
-.hero-unit h1 {
+
+.hero-title {
   font-size: 70px;
   font-weight: 200;
   margin-top: 70px;
 }
+
 .hero-start-link,
 .hero-start-link:focus {
   position: absolute;
@@ -897,12 +892,16 @@ form p {
   text-align: center;
   padding-top: 100px;
   height: 200px;
-  
 }
-@media (max-width: 747px) {
+@media (max-width: 767px) {
   .img-hero {
     margin-top: 10px;
-    background-size: 100%;
+    background-size: 80%; 
+  }
+  .hero-title {
+    font-size: 50px;
+    font-weight: 200;
+    margin-top: 70px;
   }
 }
 /*-----  End of Hero  ------*/
