--- a/lib/chrono_web/templates/page/hero.html.eex
+++ b/lib/chrono_web/templates/page/hero.html.eex
@@ -1,15 +1,15 @@
 <section id="<%= @page.title |> String.replace(" ", "")%>" class="hero m-center text-center bg-shop full-height">
   <div class="center-box">
-    <div class="container">
-      <div class="row header hero-unit">
-        <h1 class="title"><b><%= @page.title %></b></h1>
-      </div>
-      <div class="row">
-        <%= raw(@page.html) %>
-      </div>
-      <div class="row">
-        <div class="col img-hero"></div>
-      </div>
+    <div class="container-fluid">
+        <div class="row header">
+          <h1 class="hero-title"><b><%= @page.title %></b></h1>
+        </div>
+        <div class="row">
+          <%= raw(@page.html) %>
+        </div>
+        <div class="row">
+          <div class="col img-hero"></div>
+        </div>
     </div>
     <a href="#contact" class="hero-start-link smooth-scroll anchor-link"><i class="fa fa-angle-double-down"></i></a>
   </div>
