--- a/lib/chrono_web/templates/page/showcase_img.html.eex
+++ b/lib/chrono_web/templates/page/showcase_img.html.eex
@@ -1,5 +1,11 @@
-<div class="item m-center" style="
-  background: url(https:<%= @showcase_img.background_img %>); 
-  background-size: contain; 
-  background-repeat: no-repeat;
-  background-position: center center !important;"><%= raw(@showcase_img.html) %></div>
+<div id="<%= @showcase_img.id %>" class="item m-center">
+  <div class="col-lg-6 col-xl-6 col-xs-6 col-sm-6 col-md-6 col-centered team_columns_item_image">
+    <img class="img-responsive" src=https:<%= @showcase_img.background_img %> alt="<%= @showcase_img.title %>"/>
+    <div class="team_columns_item_caption">
+        <h4><%= @showcase_img.title %></h4>
+        <hr/>
+        <h5><%= raw(@showcase_img.html) %></h5>
+        <p></p>
+    </div>
+  </div>
+</div>
