fixed crash if no elements in showcase

--- a/lib/chrono_web/templates/layout/app.html.eex
+++ b/lib/chrono_web/templates/layout/app.html.eex
@@ -36,6 +36,7 @@
           <%= for page <- pages(@all_pages) do %>
             <li><a href="<%="#"<>page.title |> String.replace(" ", "") %>" class="smooth-scroll"><%= page.title%></a></li>
           <% end %>
+          <li><a href="contact" class="smooth-scroll">Register Interest</a></li>
         </ul>
       </nav>
     </div>
