--- a/lib/chrono_web/templates/page/showcase.html.eex
+++ b/lib/chrono_web/templates/page/showcase.html.eex
@@ -4,9 +4,11 @@
         <div class="row">
             <div class="col-sm-6 slider">
                 <div id="as-slider" class="owl-carousel" data-autoplay="4000" data-navigation="false" data-dots="true" data-transition="">
-                    <%=for showcase_img <- @page.linked_content do %>
-                        <%= render "#{showcase_img.template}.html", showcase_img: showcase_img %>
-                    <% end %>
+                    <%= if @page.linked_content != nil do %>
+                        <%=for showcase_img <- @page.linked_content do %>
+                            <%= render "#{showcase_img.template}.html", showcase_img: showcase_img %>
+                        <% end %>
+                    <% end%>
                 </div>
             </div> 
             <div class="col-sm-6 bg-shop" style="height:500px;">
