--- a/lib/chrono_web/templates/page/register_interest.html.eex
+++ b/lib/chrono_web/templates/page/register_interest.html.eex
@@ -1,9 +1,9 @@
-<section id="contact" class=" padding-top-bottom">
+<section id="contact" class="padding-top-bottom">
     <div class="container">
       <div class="row header">
         <div class="col-md-12">
-          <h2>Register Interest</h2>
-          <p>If your interested in joining Chrono6538 sign register your interest below</p>
+          <h2>Learn more</h2>
+          <p>If your interested in learning more about Chrono6538 fill in your details below</p>
         </div>
       </div>
       <div class="row">
