--- a/lib/chrono_web/templates/layout/footer.html.eex
+++ b/lib/chrono_web/templates/layout/footer.html.eex
@@ -1,6 +1,6 @@
 <div class="footer-1 text-center">
   <div class="container-fluid">
-    <a href="#1stpage" class="back-to-top smooth-scroll"><i class="fa fa-chevron-up"></i></a>
+    <a href="#" class="back-to-top smooth-scroll"><i class="fa fa-chevron-up"></i></a>
     <p>Chrono6538</p>
     <ul class="social-links-2 ">
       <li><a href="https://twitter.com/"><i class="fa fa-facebook"></i></a></li>
