add column to hero page

--- a/lib/chrono_web/templates/page/hero.html.eex
+++ b/lib/chrono_web/templates/page/hero.html.eex
@@ -8,7 +8,9 @@
           <h1 class="hero-title"><b><%= @page.title %></b></h1>
         </div-->
         <div class="row">
-          <%= raw(@page.html) %>
+          <div class="col-md-6 col-md-offset-3 text-center">
+            <%= raw(@page.html) %>
+          </div>
         </div>
     </div>
     <a href="#contact" class="hero-start-link smooth-scroll anchor-link"><i class="fa fa-angle-double-down"></i></a>
