--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,6 +13,32 @@ ol {
   margin: 0 auto;
 }
 
+
+video {
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+  transition: 1s opacity;
+}
+
+.video-container {
+  height: 600px;
+}
+
+.video-parallax {
+  -webkit-transition-position: fixed;
+  position: fixed;
+}
+
+
+
+
 /* 
  *  Owl Carousel - Animate Plugin
  */
