--- a/lib/chrono_web/templates/page/register_interest.html.eex
+++ b/lib/chrono_web/templates/page/register_interest.html.eex
@@ -1,4 +1,4 @@
-<section id="contact" class="padding-top-bottom">
+<section id="contact" class="bg-clouds padding-top-bottom">
     <div class="container">
       <div class="row header">
         <div class="col-md-12">
