--- a/lib/chrono_web/templates/page/shop.html.eex
+++ b/lib/chrono_web/templates/page/shop.html.eex
@@ -1,5 +1,5 @@
 <section id="<%= @page.title |> String.replace(" ", "")%>" class="cta-1 bg-shop padding-top-bottom text-center">
-  <div class="container-fluid anima scale-in">
+  <div class="container-fluid">
      <%= render "content.html", page: @page, conn: @conn %>
   </div>		
 </section>
