--- a/assets/css/style-yellow.css
+++ b/assets/css/style-yellow.css
@@ -290,7 +290,7 @@ section {
   color: #202020;
   border-radius: 4px;
   outline: none;
-  height: 50px;
+  /*height: 50px;*/
   font-size: 16px;
   font-weight: 400;
   vertical-align: top;
@@ -893,11 +893,11 @@ form p {
   padding-top: 100px;
   height: 150px;
 }
-@media (max-width: 747px) {
-  /*.img-hero {
+@media (max-width: 414px) {
+  .img-hero {
     margin-top: 10px;
-    background-size: 80%;
-  }*/
+    background-size: 100%
+  }
   .hero-title {
     font-size: 50px;
     font-weight: 200;
@@ -926,9 +926,6 @@ form p {
 @media (max-width: 767px) {
   .bg-image-2 {
     background: #bdc3c7 url(../images/mockup5.png) no-repeat 20% center;
-  }
-  .hero {
-
   }
 }
 blockquote,
@@ -1265,9 +1262,9 @@ blockquote,
   top: 45%;
   left: 20px;
 }
-.owl-theme .owl-dots {
-  /*  margin-top: 55px;*/
-}
+/* owl-theme .owl-dots {
+  margin-top: 55px;
+}*/
 .owl-theme .owl-controls .owl-nav .disabled {
   opacity: 0.5;
   cursor: default;
@@ -1289,6 +1286,7 @@ blockquote,
   margin: 5px 7px;
   background: #FFF;
   display: block;
+  backface-visibility: visible;
   -webkit-backface-visibility: visible;
   -webkit-transition: opacity 200ms ease;
   -moz-transition: opacity 200ms ease;
