--- a/lib/chrono_web/templates/page/index.html.eex
+++ b/lib/chrono_web/templates/page/index.html.eex
@@ -1,3 +1,14 @@
+<div class="overlay" id="overlay">
+    <nav class="overlay-menu">
+    <ul>
+        <%= for page <- pages(@all_pages) do %>
+        <li><a href="<%="#"<>page.title |> String.replace(" ", "") %>" class="smooth-scroll"><%= page.title%></a></li>
+        <% end %>
+        <li><a href="#contact" class="smooth-scroll">Learn More</a></li>
+    </ul>
+    </nav>
+</div>
+
 <video autoplay poster="" class="video-parallax" loop muted>
     <source src="https:<%= background_video() %>" type="video/mp4">
 </video>
